<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/game_name_up"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="casual"
        android:text="华容道"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_name_down"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="三国大冒险"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_name_up" />

    <Button
        android:id="@+id/start_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:background="@drawable/record_button_background"
        android:onClick="startGame"
        android:text="@string/start_game"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_rule" />

    <Button
        android:id="@+id/rank_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/record_button_background"
        android:onClick="rankList"
        android:text="@string/rank_list"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/start_game"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_game"
        app:layout_constraintTop_toBottomOf="@+id/start_game" />

    <Button
        android:id="@+id/game_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/record_button_background"
        android:onClick="gameRule"
        android:text="@string/game_rule"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_game"
        app:layout_constraintTop_toBottomOf="@+id/game_name_down" />

    <Button
        android:id="@+id/exit_game"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:background="@drawable/record_button_background"
        android:fontFamily="sans-serif-condensed"
        android:onClick="exitGame"
        android:text="@string/exit_game"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/game_rule"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/game_rule"
        app:layout_constraintTop_toTopOf="@+id/rank_list" />

</android.support.constraint.ConstraintLayout>