<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultySelectionActivity">

    <TextView
        android:id="@+id/difficulty_name"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="135dp"
        android:text="@string/difficulty_selection_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hengdaolima"
            android:contentDescription="@string/hengdaolima"
            android:onClick="chooseDifficulty"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hengdaolima"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_name">

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hengshujiejiang"
            android:contentDescription="@string/hengshujiejiang"
            android:onClick="chooseDifficulty"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hengshujiejiang"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shoukourupingyi"
            android:contentDescription="@string/shoukourupingyi"
            android:onClick="chooseDifficulty"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shoukourupingyi"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shoukourupinger"
            android:contentDescription="@string/shoukourupinger"
            android:onClick="chooseDifficulty"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shoukourupinger"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cengcengshefangyi"
            android:contentDescription="@string/cengcengshefangyi"
            android:onClick="chooseDifficulty"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cengcengshefangyi"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cengcengshefanger"
            android:contentDescription="@string/cengcengshefanger"
            android:onClick="chooseDifficulty"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cengcengshefanger"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>